product_docs/docs/postgis/3.2/03_upgrading_postgis.mdx
---
title: "Upgrading PostGIS"

legacyRedirectsGenerated:
  # This list is generated by a script. If you need add entries, use the `legacyRedirects` key.
  - "/edb-docs/d/edb-postgres-postgis/user-guides/postgis-guide/1.0/upgrading_postgis.html"
---

<div id="upgrade" class="registered_link"></div>

This section walks you through the following upgrade examples for RHEL/CentOS 7 platforms:

- [Example 1: Upgrading from PostGIS version 3.1 to 3.2](/postgis/latest/03_upgrading_postgis/#example-1-upgrading-from-postgis-version-31-to-32)
- [Example 2: Upgrading from PostGIS versions 2.5 or later to 3.1.4 on the same EDB Postgres Advanced Server version](/postgis/latest/03_upgrading_postgis/#example-2-upgrading-from-postgis-versions-25-or-later-to-314-on-the-same-edb-postgres-advanced-server-version)
- [Example 3: Upgrading from PostGIS versions earlier than 2.5 to 3.1.4 on a different EDB Postgres Advanced Server version](/postgis/latest/03_upgrading_postgis/#example-3-upgrading-from-postgis-versions-earlier-than-25-to-314-on-a-different-edb-postgres-advanced-server-version)

## Example 1: Upgrading from PostGIS version 3.1 to 3.2

The following example walks you through upgrading from PostGIS version 3.1 to version 3.2 for EDB Postgres Advanced Server 14.

To avoid accidental upgrades, PostGIS version 3.1 and 3.2 use different package names. So, upgrading to version 3.2 requires that you first uninstall version 3.1. Once you install version 3.2, you can upgrade the PostGIS extensions. 

1. Create the PostGIS extensions in PostGIS version 3.1, if you haven't already. For instructions, see [Creating extensions](/postgis/latest/02_creating_extensions/).

1. Uninstall PostGIS version 3.1. 
   
   For EPAS version 14:

   ```shell
   yum -y erase edb-as14-postgis31
   ```

   For older versions of EDB Postgres Advanced Server:

   ```shell
   yum erase edb-as<xx>-postgis-31
   ```
   
   Where `<xx>` is the version of EDB Postgres Advanced Server. 

   For more information, see [Uninstalling PostGIS](/postgis/latest/05_uninstalling_postgis/).

1. Install PostGIS version 3.2. For instructions, see [Installing PostGIS on RHEL 7/OL 7 x86](/postgis/latest/01a_installing_postgis/installing_on_linux/x86_amd64/postgis_rhel7_x86/).

1. Upgrade the PostGIS extensions using the following command: 

   !!! Note
   If you first upgraded from a PostGIS version earlier than 2.5 to PostGIS version 3.1, then you must `DROP` the `postgis_raster extension` before executing the command. 
   !!!

   ```sql
   SELECT postgis_extensions_upgrade();
   __OUTPUT__
   NOTICE:  Updating extension postgis from 3.1.4 to 3.2.1
   NOTICE:  Updating extension postgis_sfcgal from 3.1.4 to 3.2.1
   NOTICE:  Updating extension postgis_raster from 3.1.4 to 3.2.1
   NOTICE:  Updating extension postgis_topology from 3.1.4 to 3.2.1
   NOTICE:  Updating extension postgis_tiger_geocoder from 3.1.4 to 3.2.1
                       postgis_extensions_upgrade
   -------------------------------------------------------------------
    Upgrade completed, run SELECT postgis_full_version(); for details
   (1 row)
   ```

## Example 2: Upgrading from PostGIS versions 2.5 or later to 3.1.4 on the same EDB Postgres Advanced Server version

The following example walks you through the process of upgrading from PostGIS version 2.5.5 to PostGIS version 3.1.4 for EDB Postgres Advanced Server version 12.

!!! Note

    It is assumed that you have already created extensions for PostGIS version 2.5.5 as described in [Creating extensions](02_creating_extensions) and EDB Advanced Server 12 service is running.

1.  To upgrade PostGIS version 2.5.5 to PostGIS version 3.1.4 for EDB Postgres Advanced Server 12, assume the superuser privileges and invoke the following command:

    ```shell
    yum upgrade edb-as12-postgis-3.1.4 -y
    ```

2. To update extensions, switch to `enterprisedb` user, connect to the database (where you have already created extensions) with the psql client application, and execute the following commands:

    ```sql
    edb=# alter extension postgis update to '3.1.4';
    WARNING: unpackaging raster
    WARNING: PostGIS Raster functionality has been unpackaged
    HINT: type `SELECT postgis_extensions_upgrade();` to finish the upgrade. After upgrading, if you want to drop raster, run: DROP EXTENSION postgis_raster;
    ALTER EXTENSION
    ```

    ```sql
    edb=# alter extension address_standardizer update to '3.1.4';
    ALTER EXTENSION
    ```

    ```sql
    edb=# SELECT postgis_extensions_upgrade();
    NOTICE: Updating extension postgis_sfcgal from 2.5.5 to 3.1.4
    NOTICE: Packaging extension postgis_raster
    NOTICE: Updating extension postgis_topology from 2.5.5 to 3.1.4
    NOTICE: Updating extension postgis_tiger_geocoder from 2.5.5 to 3.1.4
              postgis_extensions_upgrade           
    -------------------------------------------------------------------
     Upgrade completed, run SELECT postgis_full_version(); for details
    (1 row)
    ```

## Example 3: Upgrading from PostGIS versions earlier than 2.5 to 3.1.4 on a different EDB Postgres Advanced Server version

The following example walks you through the process of upgrading PostGIS version 2.4.6 for EDB Postgres Advanced Server 10 to PostGIS version 3.1.4 for EDB Postgres Advanced Server version 14:

- Step 1 &mdash; Upgrade to PostGIS 3.1.1. This is an intermediate step required to resolve dependency issues.

- Step 2 &mdash; Upgrade to PostGIS 3.1.4.

- Step 3 &mdash; Upgrade EDB Postgres Advanced Server version 10 to to 14.

!!! Note  
    It is assumed that you have already created extensions for the PostGIS version earlier than 2.5.5 as described in [Creating extensions](02_creating_extensions) and EDB Advanced Server 10 service is running.

    When the PostGIS data has a dependency on the raster functions, upgrading to PostGIS version 3.1.4 requires [dumping and reloading the data](https://www.postgresql.org/docs/current/app-pgdump.html).

Step 1 &mdash; To upgrade PostGIS version 2.4.6 to 3.1.4, you need to upgrade it to 3.1.1 first:

1.  Navigate to the bin directory of EDB Advanced Server 10:

    ```shell
    cd /usr/edb/as10/bin/
    ```

2.  Assume the superuser privileges and invoke the following command to upgrade to PostGIS version 3.1.1:

    ```shell
    yum upgrade edb-as10-postgis-3.1.1 -y
    ```

    !!! Note
        See the [Installing PostGIS on a Debian/Ubuntu Host section](https://www.enterprisedb.com/docs/postgis/latest/01_installing_postgis/) for information about Debian platform commands.

3. To update extensions, switch to `enterprisedb` user, connect to the database (where you have already created extensions) with the psql client application, and execute the following commands:

    ```sql
    edb=# alter extension postgis update to '3.1.1';
    WARNING: unpackaging raster
    WARNING: PostGIS Raster functionality has been unpackaged
    HINT: type `SELECT postgis_extensions_upgrade();` to finish the upgrade. After upgrading, if you want to drop raster, run: DROP EXTENSION postgis_raster;
    ALTER EXTENSION
    ```

    ```sql
    edb=# alter extension address_standardizer update to '3.1.1';
    ALTER EXTENSION
    ```

    ```sql
    edb=# SELECT postgis_extensions_upgrade();
    __OUTPUT__
    NOTICE: Updating extension postgis_sfcgal from 2.4.6 to 3.1.1
    NOTICE: Packaging extension postgis_raster
    NOTICE: Updating extension postgis_topology from 2.4.6 to 3.1.1
    NOTICE: Updating extension postgis_tiger_geocoder from 2.4.6 to 3.1.1
              postgis_extensions_upgrade           
    -------------------------------------------------------------------
     Upgrade completed, run SELECT postgis_full_version(); for details
    (1 row)
    ```

Step 2 &mdash; Upgrade to PostGIS version 3.1.4:

1.  To upgrade PostGIS version 3.1.1 to 3.1.4, invoke the following command for EDB Postgres Advanced Server 10:

    ```shell
    yum upgrade edb-as10-postgis-3.1.4 -y
    ```

2. To update extensions, switch to `enterprisedb` user and execute the following commands:

    ```sql
    edb=# alter extension postgis update to '3.1.4';
    WARNING: unpackaging raster
    WARNING: PostGIS Raster functionality has been unpackaged
    HINT: type `SELECT postgis_extensions_upgrade();` to finish the upgrade. After upgrading, if you want to drop raster, run: DROP EXTENSION postgis_raster;
    ALTER EXTENSION
    ```

   With PostGIS version 3.1.4, the return type of the raster functions has changed, which requires dropping and creating the raster extension as part of the upgrade process. 

    ```sql
    edb=# drop extension postgis_raster;
    DROP EXTENSION
    ```

    ```sql
    edb=# SELECT postgis_extensions_upgrade();
    NOTICE: Updating extension postgis_sfcgal from 3.1.1 to 3.1.4
    NOTICE: Updating extension postgis_topology from 3.1.1 to 3.1.4
    NOTICE: Updating extension postgis_tiger_geocoder from 3.1.1 to 3.1.4
              postgis_extensions_upgrade           
    -------------------------------------------------------------------
     Upgrade completed, run SELECT postgis_full_version(); for details
    (1 row)
    ```

    ```sql
    edb=# alter extension address_standardizer update to '3.1.4';
    ALTER EXTENSION
    ```

    Quit and re-open the psql client session:

    ```sql
    edb=# \q
    ./psql -d edb -p 5444
    ```

    ```sql
    edb=# create extension postgis_raster;
    CREATE EXTENSION
    ```

Step 3 &mdash; Upgrade EDB Postgres Advanced Server version 10 to 14:

1. Assume the superuser privileges to stop the EDB Postgres Advanced Server 10 service:

    ```shell
    systemctl stop edb-as-10
    ```

2.  Install the EDB Postgres Advanced Server version 14:

    ```shell
    yum install edb-as14-server -y
    ```

3.  Navigate to the bin directory of EDB Advanced Server 14 and initialize the cluster:

    ```shell
    cd /usr/edb/as14/bin/

    ./edb-as-14-setup initdb
    ```

4. Install the PostGIS version 3.1.4 for EDB Postgres Advanced Server version 14.0:

    ```shell
    yum install edb-as14-postgis3-3.1.4 -y
    ```

5. Assume the superuser privileges to stop the EDB Postgres Advanced Server 14.0 service:

    ```shell
    systemctl stop edb-as-14
    ```

6. Switch to `enterprisedb` user and create a `temp` folder:

    ```shell
    su enterprisedb
    cd $(mktemp -d)
    ```

7.  Execute the following commands to check cluster compatibility and consistency, as well as to perform the upgrade.

    ```text
    bash-4.2$ /usr/edb/as14/bin/pg_upgrade -d /var/lib/edb/as10/data/ -D /var/lib/edb/as14/data/ -U enterprisedb -b /usr/edb/as10/bin/ -B /usr/edb/as14/bin/ -p 5444 -P 5445 -c

    Performing Consistency Checks
    -----------------------------
    Checking cluster versions ok
    Checking database user is the install user ok
    Checking database connection settings ok
    Checking for prepared transactions ok
    Checking for reg* data types in user tables ok
    Checking for contrib/isn with bigint-passing mismatch ok
    Checking for tables WITH OIDS ok
    Checking for invalid "sql_identifier" user columns ok
    Checking for invalid "unknown" user columns ok
    Checking for hash indexes ok
    Checking for presence of required libraries ok
    Checking database user is the install user ok
    Checking for prepared transactions ok
    Checking for new cluster tablespace directories ok

    Clusters are compatible
    ```

    ```text
    bash-4.2$ /usr/edb/as14/bin/pg_upgrade -d /var/lib/edb/as10/data/ -D /var/lib/edb/as14/data/ -U enterprisedb -b /usr/edb/as10/bin/ -B /usr/edb/as14/bin/ -p 5444 -P 5445 --link

    Performing Consistency Checks
    -----------------------------
    Checking cluster versions ok
    Checking database user is the install user ok
    Checking database connection settings ok
    Checking for prepared transactions ok
    Checking for reg* data types in user tables ok
    Checking for contrib/isn with bigint-passing mismatch ok
    Checking for tables WITH OIDS ok
    Checking for invalid "sql_identifier" user columns ok
    Checking for invalid "unknown" user columns ok
    Creating dump of global objects ok
    Creating dump of database schemas
    ok
    Checking for presence of required libraries ok
    Checking database user is the install user ok
    Checking for prepared transactions ok
    Checking for new cluster tablespace directories ok

    If pg_upgrade fails after this point, you must re-initdb the
    new cluster before continuing.

    Performing Upgrade
    Analyzing all rows in the new cluster ok
    Freezing all rows in the new cluster ok
    Deleting files from new pg_xact ok
    Copying old pg_clog to new server ok
    Setting next transaction ID and epoch for new cluster ok
    Deleting files from new pg_multixact/offsets ok
    Copying old pg_multixact/offsets to new server ok
    Deleting files from new pg_multixact/members ok
    Copying old pg_multixact/members to new server ok
    Setting next multixact ID and offset for new cluster ok
    Resetting WAL archives ok
    Setting frozenxid and minmxid counters in new cluster ok
    Restoring global objects in the new cluster ok
    Restoring database schemas in the new cluster
    ok
    Adding ".old" suffix to old global/pg_control ok

    If you want to start the old cluster, you will need to remove
    the ".old" suffix from /var/lib/edb/as9.6/data/global/pg_control.old.
    Because "link" mode was used, the old cluster cannot be safely
    started once the new cluster has been started.

    Linking user relation files
    ok
    Setting next OID for new cluster ok
    Sync data directory to disk ok
    Creating script to analyze new cluster ok
    Creating script to delete old cluster ok
    Checking for hash indexes ok

    Upgrade Complete
    Optimizer statistics are not transferred by pg_upgrade so,
    once you start the new server, consider running:
    ./analyze_new_cluster.sh

    Running this script will delete the old cluster's data files:
    ./delete_old_cluster.sh
     ```

8. Assume the superuser privileges, navigate to the `bin` directory of EDB Postgres Advanced Server 14, and start the service:

    ```shell
    cd /usr/edb/as14/bin/

    systemctl start edb-as-14
    ```

9. To update extensions, switch to `enterprisedb` user, connect to the database (where you have already created extensions) with the psql client application, and execute the following commands:

    ```sql
    su enterprisedb
    ./psql -d edb -p 5444
    edb=# SELECT PostGIS_Extensions_Upgrade();
    __OUTPUT__
    NOTICE: Updating extension postgis 3.1.4
          postgis_extensions_upgrade
    -------------------------------------------------------------------
    Upgrade completed, run SELECT postgis_full_version(); for details
    (1 row)
    ```

